--- a/package.json
+++ b/package.json
@@ -9,11 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.11.0",
     "@next/font": "13.1.6",
+    "bcrypt": "^5.1.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "jsonwebtoken": "^8.5.1",
+    "material-icons": "^1.13.1",
+    "mongoose": "^6.9.1",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwind-scrollbar": "^2.1.0",
+    "tailwindcss": "^3.2.4"
   }
 }
